Basic scaffolding complete and App is compiling and rendering to browser

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "npm run test -- --watch",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --hot --mode development"
   },
   "repository": {
     "type": "git",
@@ -16,7 +19,14 @@
     "url": "https://github.com/MikeBLambert/meme-generator/issues"
   },
   "homepage": "https://github.com/MikeBLambert/meme-generator#readme",
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css)$": "identity-obj-proxy",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
+    }
+  },
   "dependencies": {
+    "clean-webpack-plugin": "^1.0.0",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.0-rc.4",
     "react": "^16.6.1",
