--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-babel": "^5.2.1",
