--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.0-rc.4",
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "react-test-renderer": "^16.6.3"
   }
 }
