--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "colors": "^1.3.2",
     "dom-to-image": "^2.6.0",
     "figlet": "^1.2.1",
     "file-saver": "^2.0.0-rc.4",
+    "npm": "^6.4.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1"
   },
