--- a/package.json
+++ b/package.json
@@ -44,6 +44,13 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
+  "dependencies": {
+    "dom-to-image": "^2.6.0",
+    "figlet": "^1.2.1",
+    "file-saver": "^2.0.0-rc.4",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1"
+  },
   "bugs": {
     "url": "https://github.com/claireflanagan/meme-generator/issues"
   },
