--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.0-rc.4",
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "react-test-renderer": "^16.6.3"
   },
   "bugs": {
     "url": "https://github.com/MackenzieBerliner-Glasser/meme-generator/issues"
