--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "postcss-simple-vars": "^5.0.1",
     "prop-types": "^15.6.2",
     "style-loader": "^0.23.1",
+    "tslint": "^5.18.0",
+    "tslint-react": "^4.0.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
@@ -52,6 +54,7 @@
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.0-rc.4",
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "typescript": "^3.5.2"
   }
 }
