--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "npm run test -- --watch",
-    "build": "webpack --mode production",
+    "build": "./node_modules/webpack-cli/bin/cli.js --mode production",
     "start": "webpack-dev-server --hot --mode development"
   },
   "keywords": [],
@@ -47,7 +47,7 @@
     "tslint-react": "^4.0.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
